@startuml

title __CLIENT's Class Diagram__\n

  namespace  {
    class Command {
    }
  }
  

  namespace  {
    class Controller {
    }
  }
  

  namespace  {
    class DictionaryClient {
    }
  }
  

  namespace  {
    class DictionaryGUI {
    }
  }
  

  namespace  {
    class ServerIO {
    }
  }
  

  Controller o-- ServerIO : server
  Controller o-- Controller.UIState : state
  DictionaryGUI -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
